--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,7 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile 'com.android.support:appcompat-v7:23.0.1'
   compile 'com.clarifai:clarifai-api-java:1.2.0'
+  compile 'com.google.android.gms:play-services:8.4.0'
+  compile 'com.google.android.gms:play-services-auth:8.4.0'
+  compile 'com.google.android.gms:play-services-gcm:8.4.0'
 }
