# Some many changes
## 1. Add 'demo' module as the framework of the project.
### a. The function is separated into three parts as shown in the Drawerlayout: Community, Food Identify and Health Record.
### b. Implement the basic UI and backend of the Community part.

## 2. Add 'backend' module as the backend of Community part.
### a. The backend is on GAE and uses Blobstore to store images and puts URL of the image in Datastore.

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,17 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+enable_log=true
+
+web_client_id=UNKNOWN
+android_client_id=UNKNOWN
+android_audience=UNKNOWN
+
+email_scope = https://www.googleapis.com/auth/userinfo.email
+profile_scope = https://www.googleapis.com/auth/userinfo.profile
+
+android_key=AIzaSyC6uzxSyJML1zSVKqoUFxp3YyqO0ZMG0Hg
+server_key=AIzaSyAlmHbnD42kC12PkgM_jB8dwxTLbXvb8rE
+
+app_home=https://cdc-project-1266.appspot.com
