--- a/gradle.properties
+++ b/gradle.properties
@@ -32,3 +32,7 @@ android_key=AIzaSyC6uzxSyJML1zSVKqoUFxp3YyqO0ZMG0Hg
 server_key=AIzaSyAlmHbnD42kC12PkgM_jB8dwxTLbXvb8rE
 
 app_home=https://cdc-project-1266.appspot.com
+
+clarifai_client_id = xzy0ZSZ0jUY0Q2ExwLW0jkk8g1oF-Pa1xY6AhhCW
+clarifai_client_secret = aESBvcBjFpiYt5W7nKJKxB5hgmce8uHBlXUFrxud
+usda_key=vF66hdnI9EUf8DsBjHIVpmCoFiUIfXUIWKFjTunA
