--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -35,7 +35,9 @@ android {
             buildConfigField("String", "APP_NAME", "\"${app_name}\"")
             resValue("string", "ANDROID_KEY", "${android_key}")
             resValue("string", "SERVER_KEY", "${server_key}")
-
+            buildConfigField("String", "CLARIFAI_CLIENT_ID", "\"${clarifai_client_id}\"")
+            buildConfigField("String", "CLARIFAI_CLIENT_SECRET", "\"${clarifai_client_secret}\"")
+            buildConfigField("String", "USDA_KEY", "\"${usda_key}\"")
         }
         release {
             minifyEnabled false
@@ -61,7 +63,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
-    compile 'com.google.code.gson:gson:1.7.2'
+
+    compile 'com.clarifai:clarifai-api-java:1.2.0'
     compile 'com.github.orangegangsters:swipy:1.2.1@aar'
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
