--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -44,6 +44,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
+        packagingOptions {
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/LICENSE-FIREBASE.txt'
+            exclude 'META-INF/NOTICE'
+        }
+
     }
 }
 
@@ -70,4 +76,6 @@ dependencies {
     compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     compile 'biz.source_code:base64coder:2010-12-19'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 }
