--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -54,11 +54,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
-
-
+    compile files('libs/hapi-fhir-android-1.1.jar')
     compile('com.mikepenz:materialdrawer:5.1.6@aar') {
         transitive = true
     }
@@ -69,13 +67,12 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
-
     compile 'com.clarifai:clarifai-api-java:1.2.0'
     compile 'com.github.orangegangsters:swipy:1.2.1@aar'
     compile project(path: ':backend', configuration: 'android-endpoints')
-    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
+    compile 'cz.msebera.android:httpclient:4.4.1.1'
     compile 'biz.source_code:base64coder:2010-12-19'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-
     compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile files('lib/hapi-fhir-android-1.1.jar')
 }
