--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile files('lib/hapi-fhir-android-1.1.jar')
+    compile files('lib/hapi-fhir-android-1.5-dstu2.jar')
 }
