--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
@@ -46,8 +47,10 @@ android {
 
         packagingOptions {
             exclude 'META-INF/LICENSE'
+            exclude 'META-INF/LICENSE.txt'
             exclude 'META-INF/LICENSE-FIREBASE.txt'
             exclude 'META-INF/NOTICE'
+            exclude 'META-INF/NOTICE.txt'
         }
 
     }
@@ -74,4 +77,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile files('lib/hapi-fhir-android-1.5-dstu2.jar')
+    compile files('lib/slf4j-api-1.7.21.jar')
+    compile files('lib/slf4j-simple-1.7.21.jar')
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
