--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'com.jjoe64:graphview:4.0.1'
 }
